# pmtvs

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  LICENSE.md  PRIMITIVES.md  README.md  pyproject-maturin.toml  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
benchmarks/: PARITY_REPORT.md  __init__.py  bench_template.py  parity_report.py  parity_results.json
python/pmtvs/: __init__.py  _dispatch.py
python/pmtvs/dynamical/: __init__.py
python/pmtvs/embedding/: __init__.py
python/pmtvs/individual/: __init__.py  calculus.py  entropy.py  fractal.py  statistics.py
python/pmtvs/information/: __init__.py
python/pmtvs/matrix/: __init__.py
python/pmtvs/network/: __init__.py
python/pmtvs/pairwise/: __init__.py
python/pmtvs/statistical_tests/: __init__.py
python/pmtvs/topology/: __init__.py
shared/: Cargo.toml
shared/src/: lib.rs
src/: lib.rs
src/complexity/: entropy.rs  hurst.rs  mod.rs
src/dynamics/: ftle.rs  lyapunov.rs  mod.rs
src/embedding/: mod.rs
tests/: __init__.py  test_calculus.py  test_dispatch.py  test_edge_cases.py  test_entropy.py  test_fractal.py  test_known_answers.py  test_lyapunov_deep.py  test_parity_comprehensive.py  test_statistics.py
