[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pmtvs"
version = "0.1.0"
description = "High-performance primitives for time series and dynamical systems analysis"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Avery Rudder", email = "avery@rudder.io"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]
keywords = ["time-series", "dynamical-systems", "signal-processing", "entropy", "chaos"]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
    "maturin>=1.4",
]
full = [
    "scikit-learn>=1.2",
    "statsmodels>=0.14",
    "giotto-tda>=0.6",
    "networkx>=3.0",
]

[project.urls]
Homepage = "https://github.com/rudder-io/pmtvs"
Repository = "https://github.com/rudder-io/pmtvs"

[tool.setuptools.packages.find]
where = ["python"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
