[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "pmtvs"
version = "0.1.0"
description = "Rust-accelerated signal analysis primitives"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Jason Rudder" },
    { name = "Avery Rudder" },
]
requires-python = ">=3.9"
dependencies = ["numpy>=1.21"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.optional-dependencies]
scipy = ["scipy>=1.7"]
full = ["scipy>=1.7", "statsmodels>=0.13"]
dev = ["pytest>=7.0", "scipy>=1.7", "statsmodels>=0.13", "maturin>=1.4"]

[project.urls]
Repository = "https://github.com/jasonrudder/pmtvs"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "pmtvs._rust"
